--- a/Project/views/Login1.ejs
+++ b/Project/views/Login1.ejs
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>Login Form Design | CodeLab</title>
+      <title>Login Form</title>
       <link rel="stylesheet" href="stylelogin.css">
+      <link rel="icon" href="../images/PayTrack Logo.jpeg">
    </head>
    <body>
       <div class="wrapper">
@@ -28,13 +29,11 @@
                   <a href="#">Forgot password?</a>
                </div>
             </div>
-            <a href="http://localhost:9090/dashboard">
-               <div class="field">
-                  <button>Login</button>
-               </div>
-             </a>
+            <div class="field">
+               <input type="submit" value="Login">
+            </div>
             <div class="signup-link">
-               Not a member? <a href="http://localhost:9090/signup">Signup now</a>
+               Not a member? <a href="#">Signup now</a>
             </div>
          </form>
       </div>
