--- a/Project/views/signup.ejs
+++ b/Project/views/signup.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> Responsive Registration Form | CodingLab </title>
+    <title>Registration Form</title>
     <link rel="stylesheet" href="stylesignup.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
@@ -57,13 +57,12 @@
             </label>
           </div>
         </div>
-        <a href="http://localhost:9090/dashboard">
-          <div class="button">
+        <div class="button">
           <input type="submit" value="Register">
-          </div>
-        </a>
+        </div>
       </form>
     </div>
   </div>
+
 </body>
 </html>
