--- a/Project/public/stylespay.css
+++ b/Project/public/stylespay.css
@@ -10,7 +10,7 @@ body{
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background: url("../images/back.jpg");
+  background: url("../images/bg.jpg");
 }
 .container{
   max-width: 700px;
@@ -115,7 +115,6 @@ form .input-box span.details{
    background: linear-gradient(135deg, navy, skyblue);
  }
  form .button input:hover{
-  /* transform: scale(0.99); */
   background: linear-gradient(-135deg, navy, skyblue);
   }
  @media(max-width: 584px){
