--- a/Project/views/homepage.ejs
+++ b/Project/views/homepage.ejs
@@ -6,13 +6,13 @@
     <title>PayTrack</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./images/PayTrack Logo.jpeg">
 </head>
 <body>
     <div class="Page">
     <header class="header"> 
         <div class="nav">
-            <div class="logo"><img class="logo" src="/images/PayTrack Logo.jpeg" alt="logo"></div>
-            <div class="Home"><a class="head" href="">Home</a></div>
+            <div class="logo"><img class="logo" src="./images/PayTrack Logo.jpeg" alt="logo"></div>
             <div class="About"><a class="head" href="">About</a></div>
             <div class="Track"><a class="head" href="">Contact Us</a></div>
         </div>
@@ -22,8 +22,8 @@
     <img class="pay" src="./images/pay.jpeg" alt="">
         <div class="container">
             <div>
-              <a href="http://localhost:9090/login"><button class="log">Login</button></a>
-              <a href="http://localhost:9090/signup"><button class="reg">Signup</button></a>
+              <button class="log">Login</button>
+              <button class="reg">Sign up</button>
             </div>
           </div>
           <img class="wallet" src="./images/e-wallet.jpg" alt="">
