--- a/Project/public/styles.css
+++ b/Project/public/styles.css
@@ -48,7 +48,7 @@
     padding: 30px;
 }
 .Page{
-    background: url("./images/back.jpg");
+    background-image: url("./images/235729299927.jpg");
     height: 270vh;
 }
 .main{
