--- a/Project/views/Navbar1.ejs
+++ b/Project/views/Navbar1.ejs
@@ -26,6 +26,6 @@
             <li>Embrace financial empowerment with PayTrack – where tracking expenses and <br> paying bills meet innovation, security, and user-friendly design.</li>
         </ul>
     </div>
-    <button class="btn">Back</button>
+    <a href="http://localhost:9090/homepage"><button class="btn">Back</button></a>
 </body>
 </html>
