--- a/Project/views/Navbar2.ejs
+++ b/Project/views/Navbar2.ejs
@@ -49,6 +49,6 @@
             </tbody>
         </table>
     </div>
-    <button class="btn">Back</button>
+    <a href="http://localhost:9090/homepage"><button class="btn">Back</button></a>
 </body>
 </html>
