--- a/Project/views/homepage.ejs
+++ b/Project/views/homepage.ejs
@@ -13,8 +13,8 @@
     <header class="header"> 
         <div class="nav">
             <div class="logo"><img class="logo" src="./images/PayTrack Logo.jpeg" alt="logo"></div>
-            <div class="About"><a class="head" href="">About</a></div>
-            <div class="Track"><a class="head" href="">Contact Us</a></div>
+            <div class="About"><a class="head" href="http://localhost:9090/about">About</a></div>
+            <div class="Track"><a class="head" href="http://localhost:9090/contactus">Contact Us</a></div>
         </div>
     </header>
     <img class="HoriLogo" src="./images/PayTrackHoriz.png" alt="">
@@ -22,8 +22,8 @@
     <img class="pay" src="./images/pay.jpeg" alt="">
         <div class="container">
             <div>
-              <button class="log">Login</button>
-              <button class="reg">Sign up</button>
+              <a href="http://localhost:9090/login"><button class="log">Login</button></a>
+              <a href="http://localhost:9090/signup"><button class="reg">Sign up</button></a>
             </div>
           </div>
           <img class="wallet" src="./images/e-wallet.jpg" alt="">
