--- a/Project/public/stylesignup.css
+++ b/Project/public/stylesignup.css
@@ -10,7 +10,7 @@ body{
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background: url("../images/back.jpg");
+  background: url("./images/back.jpg");
 }
 .container{
   max-width: 700px;
